--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,21 @@
 			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/commons-cli-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/commons-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpclient5-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpclient5-cache-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpclient5-fluent-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpclient5-testing-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpclient5-win-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpcore5-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpcore5-h2-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpcore5-reactive-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/httpcore5-testing-5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/jna-5.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/jna-platform-5.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/reactive-streams-1.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/rxjava-2.2.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan/eclipse/lib/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
